--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "Maarten ter Mors",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.670.0",
     "body": "^5.1.0",
     "json": "^9.0.6",
+    "mysql": "^2.18.1",
     "promise": "^8.1.0",
     "ssl-root-cas": "^1.3.1"
   }
